--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       <nav
         class="text-almostblack max-w-[1536px] w-full py-2 px-16 flex justify-between items-center"
       >
-        <div class="flex items-center">
+        <div class="flex items-center hover-underline underline-logo">
           <a href="#">
             <img
-              class="scale-125"
+              class="scale-125 py-2"
               src="public\images\giarddesign.svg"
               alt="Logo Strony"
           /></a>
@@ -106,14 +106,14 @@
           </li>
           <li>
             <a
-              href="#"
+              href="#about-section"
               class="px-6 py-3 rounded-full hover:text-gray-300 hover:bg-almostblack transition-all"
               >O firmie</a
             >
           </li>
           <li>
             <a
-              href="#"
+              href="#masonry-section"
               class="px-6 py-3 rounded-full hover:text-gray-200 hover:bg-almostblack transition-all"
               >Realizacje</a
             >
@@ -209,11 +209,11 @@
             </h5>
             <div class="flex w-full gap-x-10">
               <button
-                class="w-56 bg-forestgreen hover:bg-gradient-to-t hover:from-forestgreen hover:to-green-800 font-light text-white hover:-translate-y-1 hover:drop-shadow-xl rounded-full transition-all"
+                class="px-6 bg-forestgreen hover:bg-gradient-to-t hover:from-forestgreen hover:to-green-800 font-light text-white hover:-translate-y-1 hover:drop-shadow-xl rounded-full transition-all"
               >
                 Skontaktuj się z nami
               </button>
-              <a href="#third_section">
+              <a href="#masonry-section">
                 <button
                   class="flex w-64 items-center justify-center gap-x-2 py-3 group bg-transparent hover:rotate-3 hover:bg-white hover:bg-opacity-20 text-forestgreen border-solid border-2 border-forestgreen transition-all rounded-full"
                 >
@@ -224,7 +224,7 @@
                     viewBox="0 0 24 24"
                     stroke-width="1.5"
                     stroke="currentColor"
-                    class="w-6 h-6 group-hover:animate-bounce transition-all"
+                    class="w-6 h-6"
                   >
                     <path
                       stroke-linecap="round"
@@ -344,6 +344,7 @@
           </svg>
         </button>
       </div>
+      <!-- ==== OFFER HEADER ====-->
       <div class="max-w-3xl ml-64 pt-28">
         <h3 class="text-md text-forestgreen">Oferta</h3>
         <h5 class="mt-5 text-5xl font-monts font-medium">
@@ -361,8 +362,14 @@
         <div
           class="w-full h-full aspect-square bg-white rounded-3xl p-12 flex flex-col"
         >
-          <img src="/public/images/offer_icon_1.svg" class="w-12 h-12" />
-          <h6 class="mt-6 text-3xl font-monts font-medium">Projekty</h6>
+          <div
+            class="bg-darkbeige ml-1 mt-1 w-10 h-10 animate-ping time-3000 rounded-full absolute"
+          ></div>
+          <img
+            src="/public/images/offer_icon_1.svg"
+            class="w-12 h-12 absolute"
+          />
+          <h6 class="mt-[72px] text-3xl font-monts font-medium">Projekty</h6>
           <p class="mt-3">
             Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym
             wykorzystaniem istniejącej przestrzeni.
@@ -390,8 +397,16 @@
         <div
           class="w-full h-full aspect-square bg-white rounded-3xl p-12 flex flex-col"
         >
-          <img src="/public/images/offer_icon_2.svg" class="w-12 h-12" />
-          <h6 class="mt-6 text-3xl font-monts font-medium">Wizualizacje</h6>
+          <div
+            class="bg-darkbeige ml-1 mt-1 w-10 h-10 animate-ping time-3000 rounded-full absolute"
+          ></div>
+          <img
+            src="/public/images/offer_icon_2.svg"
+            class="w-12 h-12 absolute"
+          />
+          <h6 class="mt-[72px] text-3xl font-monts font-medium">
+            Wizualizacje
+          </h6>
           <p class="mt-3">
             Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru
             animowanego w technologii 3D.
@@ -419,8 +434,14 @@
         <div
           class="w-full h-full aspect-square bg-white rounded-3xl p-12 flex flex-col"
         >
-          <img src="/public/images/offer_icon_3.svg" class="w-12 h-12" />
-          <h6 class="mt-6 text-3xl font-monts font-medium">Realizacje</h6>
+          <div
+            class="bg-darkbeige ml-1 mt-1 w-10 h-10 animate-ping time-3000 rounded-full absolute"
+          ></div>
+          <img
+            src="/public/images/offer_icon_3.svg"
+            class="w-12 h-12 absolute"
+          />
+          <h6 class="mt-[72px] text-3xl font-monts font-medium">Realizacje</h6>
           <p class="mt-3">
             Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i
             zaawansowanych technologii.
@@ -448,7 +469,7 @@
       </div>
     </section>
     <!-- ==== ABOUT SECTION ==== -->
-    <section id="third_section">
+    <section id="about-section">
       <div>
         <div class="flex">
           <div class="slide-1 flex h-[720px] w-full bg-gradient-to-lb">
@@ -496,7 +517,10 @@
       </div>
     </section>
     <!-- ==== MASONRY SECTION ====-->
-    <section class="max-w-[1536px] mx-auto bg-darkbeige relative">
+    <section
+      id="masonry-section"
+      class="max-w-[1536px] mx-auto bg-darkbeige relative"
+    >
       <div class="max-w-3xl ml-64 pt-28">
         <h3 class="text-md text-forestgreen">Realizacje</h3>
         <h5 class="mt-5 mb-24 text-5xl font-monts font-medium">
@@ -510,70 +534,70 @@
         <div class="grid-item w-1/3 p-5">
           <img
             src="public/images/project_0.png"
-            alt=""
+            alt="project photo"
             class="w-full h-auto rounded-sm hover:scale-105 transition-all cursor-pointer"
           />
         </div>
         <div class="grid-item w-1/3 p-5">
           <img
             src="public/images/project_1.png"
-            alt=""
+            alt="project photo"
             class="w-full h-auto rounded-sm hover:scale-105 transition-all cursor-pointer"
           />
         </div>
         <div class="grid-item w-1/3 p-5">
           <img
             src="public/images/project_2.png"
-            alt=""
+            alt="project photo"
             class="w-full h-auto rounded-sm hover:scale-105 transition-all cursor-pointer"
           />
         </div>
         <div class="grid-item w-1/3 p-5">
           <img
             src="public/images/project_3.png"
-            alt=""
+            alt="project photo"
             class="w-full h-auto rounded-sm hover:scale-105 transition-all cursor-pointer"
           />
         </div>
         <div class="grid-item w-1/3 p-5">
           <img
             src="public/images/project_4.png"
-            alt=""
+            alt="project photo"
             class="w-full h-auto rounded-sm hover:scale-105 transition-all cursor-pointer"
           />
         </div>
         <div class="grid-item w-1/3 p-5">
           <img
             src="public/images/project_5.png"
-            alt=""
+            alt="project photo"
             class="w-full h-auto rounded-sm hover:scale-105 transition-all cursor-pointer"
           />
         </div>
         <div class="grid-item w-1/3 p-5">
           <img
             src="public/images/project_6.png"
-            alt=""
+            alt="project photo"
             class="w-full h-auto rounded-sm hover:scale-105 transition-all cursor-pointer"
           />
         </div>
         <div class="grid-item w-1/3 p-5">
           <img
             src="public/images/project_7.png"
-            alt=""
+            alt="project photo"
             class="w-full h-auto rounded-sm hover:scale-105 transition-all cursor-pointer"
           />
         </div>
         <div class="grid-item w-1/3 p-5">
           <img
             src="public/images/project_8.png"
-            alt=""
+            alt="project photo"
             class="w-full h-auto rounded-sm hover:scale-105 transition-all cursor-pointer"
           />
         </div>
         <div class="grid-item w-1/3 p-5 overflow-hidden">
           <img
             src="public/images/project_9.png"
-            alt=""
+            alt="project photo"
             class="w-full h-auto rounded-sm hover:scale-105 transition-all cursor-pointer"
           />
         </div>
@@ -623,14 +647,98 @@
         </button>
       </div>
     </section>
+    <!-- ==== CONTACT ==== -->
     <section
       class="contact-section relative max-w-[1536px] w-full mx-auto mt-[-840px] duration-1000"
     >
       <div
-        class="contact-div h-[720px] w-full bg-forestgreen duration-1000"
-      ></div>
+        class="h-[560px] w-full flex justify-center items-center bg-lightbeige duration-1000"
+      >
+        <div
+          class="h-[400px] w-full mx-32 flex justify-center items-center bg-forestgreen"
+        >
+          <div class="w-full mx-36 flex items-center justify-between">
+            <h4 class="text-4xl text-white font-monts leading-[150%]">
+              Zostańmy w kontakcie! <br />
+              Znajdziesz nas na
+              <i class="italic font-inter font-medium">Instagramie.</i>
+            </h4>
+            <div class="w-[170px]">
+              <p class="text-white">Śledź nasze najnowsze realizacje!</p>
+              <a href="https://www.instagram.com/">
+                <button
+                  class="px-6 py-3 mt-6 bg-white text-forestgreen hover:drop-shadow-xl hover:bg-lightbeige rounded-full transition-all"
+                >
+                  Instagram
+                </button></a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    <footer class="h-[420px] w-full bg-black duration-1000 relative"></footer>
+    <!-- ==== FOOTER ====-->
+    <footer class="h-[420px] w-full bg-almostblack relative">
+      <div class="w-full h-full py-16 max-w-[1536px] mx-auto px-64">
+        <div
+          class="w-full flex items-center justify-between pb-12 border-b-[1px] border-lightbeige border-solid"
+        >
+          <div class="flex items-center">
+            <a href="#">
+              <img src="public\images\giarddesign_white.svg" alt="Logo Strony"
+            /></a>
+          </div>
+          <div class="flex items-center gap-x-10">
+            <p class="text-lightbeige">
+              Daj znać, co możemy dla Ciebie zrobić!
+            </p>
+            <button
+              class="px-6 py-4 bg-forestgreen hover:bg-gradient-to-t hover:from-forestgreen hover:to-green-800 font-light text-white hover:-translate-y-1 hover:drop-shadow-xl rounded-full transition-all"
+            >
+              Skontaktuj się z nami
+            </button>
+          </div>
+        </div>
+        <div
+          class="flex items-center justify-between mt-12 text-lightbeige text-sm"
+        >
+          <div class="flex gap-x-12">
+            <a class="hover-underline transition-all pb-1" href="#">Kontakt</a
+            ><a
+              class="hover-underline transition-all pb-1"
+              href="https://www.instagram.com/"
+              >Instagram</a
+            ><a
+              class="hover-underline transition-all pb-1"
+              href="https://www.facebook.com/"
+              >Facebook</a
+            ><a
+              class="hover-underline transition-all pb-1"
+              href="https://www.linkedin.com/"
+              >LinkedIn</a
+            >
+          </div>
+          <div class="flex gap-x-12">
+            <a href="tel:000000000">000-000-000</a
+            ><a href="mailto:giarddesign@kontakt.pl">giarddesign@kontakt.pl</a>
+          </div>
+        </div>
+        <div
+          class="flex items-center mt-24 justify-between text-lightbeige text-sm"
+        >
+          <p>Prawa zastrzeżone &#169; 2022</p>
+          <div class="flex gap-x-4 items-center">
+            <p class="inline">made by</p>
+            <a href="https://adrespect.pl/"
+              ><img
+                class="inline"
+                src="/public/images/adrespect.svg"
+                alt="adrespect logo"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="/masonry/masonry.pkgd.min.js"></script>
     <script></script>
     <script
